--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-<h1 class="sitename">
-  Tutor Dan<span>.</span><br>
-  <span class="academy">Academy</span>
-</h1>
 
+
+  <img src="assets/img/portfolio/LogoBlack.png" 
+     alt="logo" 
+     data-aos="fade-in"
+     style="width:280px; height:auto;">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -364,7 +365,7 @@
                 </p>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/portfolio/mainB.JPG" alt="" class="img-fluid">
+                <img src="assets/img/portfolio/Korea.JPG" alt="" class="img-fluid">
               </div>
             </div>
           </div><!-- End Tab Content Item -->
@@ -897,14 +898,16 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
     <div class="row gy-4">
 
       <!-- Left Column: TutorDan info + LinkedIn -->
-      <div class="col-lg-4 col-md-6 footer-about">
-        <a href="index.html" class="logo d-flex align-items-center">
-          <span class="sitename">Tutor Dan</span><span>.</span>
-        </a>
+      
+     <img src="assets/img/portfolio/LogoWhite.png" 
+     alt="logo" 
+     data-aos="fade-in"
+     style="width:240px; height:auto;">
+      </a>
         <div class="social-links d-flex mt-4">
           <a href=""><i class="bi bi-linkedin"></i></a>
         </div>
-      </div>
+    
 
       <!-- Right Column: CTA Button aligned with TutorDan info -->
       <div class="col-lg-8 col-md-6 d-flex align-items-center justify-content-end">
@@ -920,7 +923,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
 
 <!-- Footer -->
 <div class="container copyright text-center mt-4">
-  <p><a> Tutor Dan | 2026 </a></p>
+  <p><a> Tutor Dan Academy | 2026 </a></p>
   <div class="credits">
 
   </div>
