--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h2 data-aos="fade-up" data-aos-delay="100">Learn Business English from an Experienced UCLA Tutor</h2>
-            <p data-aos="fade-up" data-aos-delay="200">With 10 years of tutoring experience, helping Korean professionals master business English. Start with your free 20-minute class today!</p>
+            <h2 data-aos="fade-up" data-aos-delay="100">Learn English from an Experienced UCLA Tutor</h2>
+            <p data-aos="fade-up" data-aos-delay="200">With 10 years of tutoring experience, helping Korean professionals master casual & business English. Start with your free 20-minute class today!</p>
             <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
               <a href="#about" class="btn-get-started">Schedule Your FREE Class</a>
   <a href="https://vimeo.com/1140966123?share=copy&fl=sv&fe=ci"
