--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/portfolio/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -902,7 +902,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
      <img src="assets/img/portfolio/LogoWhite.png" 
      alt="logo" 
      data-aos="fade-in"
-     style="width:240px; height:auto;">
+     style="width:400px; height:auto;">
       </a>
         <div class="social-links d-flex mt-4">
           <a href=""><i class="bi bi-linkedin"></i></a>
