--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Tutor Dan</title>
+  <title>Tutor Dan Academy</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -902,7 +902,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
      <img src="assets/img/portfolio/LogoWhite.png" 
      alt="logo" 
      data-aos="fade-in"
-     style="width:300px; height:auto;">
+     style="width:350px; height:auto;">
       </a>
         <div class="social-links d-flex mt-4">
           <a href=""><i class="bi bi-linkedin"></i></a>
