--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#about">Schedule Your FREE Class/무료 수업 예약</a>
+      <a class="btn-getstarted" href="index.html#about">Schedule Your FREE Class</a>
 
     </div>
   </header>
@@ -81,7 +81,7 @@
             <h2 data-aos="fade-up" data-aos-delay="100">Master English Fast with a UCLA-Trained Expert Tutor</h2>
             <p data-aos="fade-up" data-aos-delay="200">With 10 years of tutoring experience, we help Korean professionals master casual & business English. Start with your free 20-minute class today!</p>
             <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-              <a href="#about" class="btn-get-started">Schedule Your FREE Class/무료 수업 예약</a>
+              <a href="#about" class="btn-get-started">Schedule Your FREE Class - 무료 수업 예약</a>
   <a href="https://vimeo.com/1140966123?share=copy&fl=sv&fe=ci"
    class="glightbox btn-watch-video d-flex align-items-center"
    data-type="video"
@@ -854,7 +854,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
 
       <!-- Contact Form -->
       <div class="col-lg-6">
-        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+        <form action="https://formsubmit.co/dan@tutordanacademy.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
           <div class="row gy-4">
 
             <div class="col-md-6">
@@ -916,7 +916,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
 <div style="width:100%; text-align:center; margin-top:30px;">
   <a href="YOUR_CALENDLY_LINK_HERE" target="_blank"
      style="display:inline-block; padding:16px 32px; background-color:#e0423c; color:#fff; font-size:18px; font-weight:600; border-radius:6px; text-decoration:none; transition:0.3s;">
-    Schedule Your FREE Session/무료 수업 예약
+    Schedule Your FREE Session - 무료 수업 예약
   </a>
 </div>
 
