--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
      <img src="assets/img/portfolio/LogoWhite.png" 
      alt="logo" 
     
-     style="width:350px; height:auto;">
+     style="width:300px; height:auto;">
       </a>
   
     
@@ -916,7 +916,8 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
 <div style="width:100%; text-align:center; margin-top:30px;">
   <a href="YOUR_CALENDLY_LINK_HERE" target="_blank"
      style="display:inline-block; padding:16px 32px; background-color:#e0423c; color:#fff; font-size:18px; font-weight:600; border-radius:6px; text-decoration:none; transition:0.3s;">
-    Schedule Your FREE Session - 무료 수업 예약
+    Schedule Your FREE Session <br>
+    무료 수업 예약
   </a>
 </div>
 
