--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
         <div class="row gy-5">
 
           <div class="content col-xl-5 d-flex flex-column" data-aos="fade-up" data-aos-delay="100">
-            <h3>Unlock Your Professional English Confidence</h3>
-            <p>Master real business English skills that help you speak clearly, work globally, and stand out at your compan  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
+            <h3>English Tutoring by Top University Graduates</h3>
+            <p>At Tutor Dan Academy, we provide English tutoring by top university graduates. Currently, Danso Gordon — a UCLA graduate — leads personalized business and casual English lessons designed to help you communicate clearly and confidently. As we grow, we’ll be adding more top university tutors to our team
             </p>
             <a href="#" class="about-btn align-self-center align-self-xl-start"><span>About us</span> <i class="bi bi-chevron-right"></i></a>
           </div>
@@ -851,42 +851,50 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
         </div>
       </div>
       <!-- End Email Info -->
+ 
+
 
       <!-- Contact Form -->
-      <div class="col-lg-6">
-        <form action="https://formsubmit.co/dan@tutordanacademy.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-          <div class="row gy-4">
+<div class="col-lg-6">
+  <form action="https://formsubmit.co/dan@tutordanacademy.com" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+    
+    <!-- Hidden Fields for FormSubmit -->
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="https://www.tutordanacademy.com/thank-you.html">
 
-            <div class="col-md-6">
-              <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-            </div>
+    <div class="row gy-4">
 
-            <div class="col-md-6">
-              <input type="email" name="email" class="form-control" placeholder="Your Email" required>
-            </div>
-
-            <div class="col-md-12">
-              <input type="text" name="subject" class="form-control" placeholder="Subject" required>
-            </div>
-
-            <div class="col-md-12">
-              <textarea name="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-            </div>
-
-            <div class="col-md-12 text-center">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
-
-              <button type="submit" style="padding:12px 28px; font-size:16px; background-color:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;">
-                Send Message
-              </button>
-            </div>
-
-          </div>
-        </form>
+      <div class="col-md-6">
+        <input type="text" name="name" class="form-control" placeholder="Your Name" required>
       </div>
-      <!-- End Contact Form -->
+
+      <div class="col-md-6">
+        <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+      </div>
+
+      <div class="col-md-12">
+        <input type="text" name="subject" class="form-control" placeholder="Subject" required>
+      </div>
+
+      <div class="col-md-12">
+        <textarea name="message" class="form-control" rows="4" placeholder="Message" required></textarea>
+      </div>
+
+      <div class="col-md-12 text-center">
+        <div class="loading">Loading</div>
+        <div class="error-message"></div>
+        <div class="sent-message">Your message has been sent. Thank you!</div>
+
+        <button type="submit" style="padding:12px 28px; font-size:16px; background-color:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;">
+          Send Message
+        </button>
+      </div>
+
+    </div>
+  </form>
+</div>
+<!-- End Contact Form -->
+
 
   
     </div>
