--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
         <div class="row gy-5">
 
           <div class="content col-xl-5 d-flex flex-column" data-aos="fade-up" data-aos-delay="100">
-            <h3>English Tutoring by Top University Graduates</h3>
-            <p>At Tutor Dan Academy, we provide English tutoring by top university graduates. Currently, Danso Gordon — a UCLA graduate — leads personalized business and casual English lessons designed to help you communicate clearly and confidently. As we grow, we’ll be adding more top university tutors to our team
+            <h3>English Tutoring by Top U.S. University Graduates</h3>
+            <p>At Tutor Dan Academy, we provide English tutoring by top U.S. university graduates. Currently, Danso Gordon — a UCLA graduate — leads personalized business and casual English lessons designed to help you communicate clearly and confidently. As we grow, we’ll be adding more top university tutors to our team
             </p>
             <a href="#" class="about-btn align-self-center align-self-xl-start"><span>About us</span> <i class="bi bi-chevron-right"></i></a>
           </div>
