added free class page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
             <p data-aos="fade-up" data-aos-delay="200">With 10 years of tutoring experience, we help Korean professionals master casual & business English. Start with your free 20-minute class today!</p>
             <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
               <a href="#about" class="btn-get-started">Schedule Your FREE Class - 무료 수업 예약</a>
-  <a href="https://vimeo.com/1140966123?share=copy&fl=sv&fe=ci"
+  
+  
+  <a href="assets/img/portfolio/PresentationVideo.mp4"
    class="glightbox btn-watch-video d-flex align-items-center"
    data-type="video"
    data-autoplay="true">
@@ -852,53 +854,43 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
       </div>
       <!-- End Email Info -->
  
-<!-- Contact Form -->
-<div class="col-lg-6">
-  <form action="https://formsubmit.co/dan@tutordanacademy.com" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-    <div class="row gy-4">
+ <!-- Contact Form -->
+      <div class="col-lg-6">
+        <form action="https://formsubmit.co/dan@tutordanacademy.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+          <div class="row gy-4">
 
-      <!-- Name -->
-      <div class="col-md-6">
-        <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+            <div class="col-md-6">
+              <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+            </div>
+
+            <div class="col-md-6">
+              <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+            </div>
+
+            <div class="col-md-12">
+              <input type="text" name="subject" class="form-control" placeholder="Subject" required>
+            </div>
+
+            <div class="col-md-12">
+              <textarea name="message" class="form-control" rows="4" placeholder="Message" required></textarea>
+            </div>
+
+            <div class="col-md-12 text-center">
+              <div class="loading">Loading</div>
+              <div class="error-message"></div>
+              <div class="sent-message">Your message has been sent. Thank you!</div>
+
+              <button type="submit" style="padding:12px 28px; font-size:16px; background-color:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;">
+                Send Message
+              </button>
+            </div>
+
+          </div>
+        </form>
       </div>
+      <!-- End Contact Form -->
 
-      <!-- Email -->
-      <div class="col-md-6">
-        <input type="email" name="email" class="form-control" placeholder="Your Email" required>
-      </div>
 
-      <!-- Subject -->
-      <div class="col-md-12">
-        <input type="text" name="subject" class="form-control" placeholder="Subject" required>
-      </div>
-
-      <!-- Message -->
-      <div class="col-md-12">
-        <textarea name="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-      </div>
-
-      <!-- Hidden fields for FormSubmit -->
-      <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://www.tutordanacademy.com/thank-you.html">
-      <input type="hidden" name="_template" value="table">
-
-      <!-- Status Messages -->
-      <div class="col-md-12 text-center">
-        <div class="loading">Loading</div>
-        <div class="error-message"></div>
-        <div class="sent-message">Your message has been sent. Thank you!</div>
-
-        <!-- Submit Button -->
-        <button type="submit" 
-          style="padding:12px 28px; font-size:16px; background-color:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;">
-          Send Message
-        </button>
-      </div>
-
-    </div>
-  </form>
-</div>
-<!-- End Contact Form -->
 
 
 
