--- a/freeclass/index.html
+++ b/freeclass/index.html
@@ -63,7 +63,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#about">Schedule Your FREE Class</a>
+      <a class="btn-getstarted" href="freeclass/index.html">Schedule Your FREE Class</a>
 
     </div>
   </header>
