--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="freeclass/index.html" class="logo d-flex align-items-center me-auto">
+      <a href="/freeclass" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
 
@@ -63,7 +63,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="tutordanacademy.com/freeclass">Schedule Your FREE Class</a>
+      <a class="btn-getstarted" href="/freeclass">Schedule Your FREE Class</a>
 
     </div>
   </header>
@@ -81,7 +81,7 @@
             <h2 data-aos="fade-up" data-aos-delay="100">Master English Fast with a UCLA-Trained Expert Tutor</h2>
             <p data-aos="fade-up" data-aos-delay="200">With 10 years of tutoring experience, we help Korean professionals master casual & business English. Start with your free 20-minute class today!</p>
             <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-              <a href="freeclass/index.html" class="btn-get-started">Schedule Your FREE Class - 무료 수업 예약</a>
+              <a href="/freeclass" class="btn-get-started">Schedule Your FREE Class - 무료 수업 예약</a>
   
   
   <a href="assets/img/portfolio/PresentationVideo.mp4"
@@ -752,7 +752,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
                   <div style="text-align:center; margin-top:40px;">
-      <a href="freeclass/index.html" target="_blank" style="display:inline-block; padding:14px 28px; background-color:#28a745; color:#fff; border-radius:6px; text-decoration:none; font-size:18px; font-weight:600;">
+      <a href="/freeclass" target="_blank" style="display:inline-block; padding:14px 28px; background-color:#28a745; color:#fff; border-radius:6px; text-decoration:none; font-size:18px; font-weight:600;">
         Still have questions? Book your free session! 무료 수업 예약
       </a>
     </div>
@@ -920,7 +920,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
 
 <!-- CTA Button Centered -->
 <div style="width:100%; text-align:center; margin-top:30px;">
-  <a href="freeclass/index.html" target="_blank"
+  <a href="/freeclass" target="_blank"
      style="display:inline-block; padding:16px 32px; background-color:#e0423c; color:#fff; font-size:18px; font-weight:600; border-radius:6px; text-decoration:none; transition:0.3s;">
     Schedule Your FREE Session <br>
     무료 수업 예약
