added pricing page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="/freeclass" class="logo d-flex align-items-center me-auto">
+      <a href="#hero" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
 
@@ -611,77 +611,86 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
       </div>
 
     </section><!-- /Testimonials Section -->
+<!-- Pricing Section -->
+<section id="pricing" class="pricing section section-bg dark-background">
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Pricing</h2>
+    <p>All lessons are private 1:1 free-talk sessions — tailored to your professional goals.<br>당신의 목표에 맞는 플랜을 선택하세요</p>
+  </div>
 
-    <!-- Pricing Section -->
-    <section id="pricing" class="pricing section section-bg dark-background">
+  <div class="container">
+    <div class="row g-4 g-lg-0">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Pricing</h2>
-        <p>All lessons are private 1:1 free-talk sessions — tailored to your professional goals.<br>당신의 목표에 맞는 플랜을 선택하세요</p>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row g-4 g-lg-0">
-
-          <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
-            <div class="pricing-item">
-              <h3>Launch Plan</h3>
-              <h4><sup>$</sup>240<span> / month</span></h4>
-              <ul>
-                <li><i class="bi bi-check"></i> <span>2x/week lessons </span></li>
-                <li><i class="bi bi-check"></i> <span>20-min classes</span></li>
-                <li><i class="bi bi-check"></i> <span>Access to 1:1 tutoring</span></li>
-                 <li><i class="bi bi-check"></i> <span>Free scheduling flexibility</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>3x/week available</span></li>
-                <li class="na"><i class="bi bi-x"></i> <span>30-min classes </span></li>
-              </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
-            </div>
-          </div><!-- End Pricing Item -->
-
-          <div class="col-lg-4 featured" data-aos="zoom-in" data-aos-delay="200">
-            <div class="pricing-item">
-              <h3>Momentum Plan</h3>
-              <h4><sup>$</sup>420-480<span> / month</span></h4>
-              <ul>
-                <li><i class="bi bi-check"></i> <span>2x/week lessons</span></li>
-                <li><i class="bi bi-check"></i> <span>3x/week lessons</span></li>
-                <li><i class="bi bi-check"></i> <span>20-min classes</span></li>
-                <li><i class="bi bi-check"></i> <span>30-min classes</span></li>
-                <li><i class="bi bi-check"></i> <span>Access to 1:1 tutoring</span></li>
-                <li><i class="bi bi-check"></i> <span>Free scheduling flexibility</span></li>
-              </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
-            </div>
-          </div><!-- End Pricing Item -->
-
-          <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
-            <div class="pricing-item">
-              <h3>Peak Plan</h3>
-              <h4><sup>$</sup>620<span> / month</span></h4>
-              <ul>
-               <li><i class="bi bi-check"></i> <span>2x/week lessons</span></li>
-                <li><i class="bi bi-check"></i> <span>3x/week lessons</span></li>
-                <li><i class="bi bi-check"></i> <span>20-min classes</span></li>
-                <li><i class="bi bi-check"></i> <span>30-min classes</span></li>
-                <li><i class="bi bi-check"></i> <span>Access to 1:1 tutoring</span></li>
-                <li><i class="bi bi-check"></i> <span>Free scheduling flexibility</span></li>
-                <li><i class="bi bi-check"></i> <span>Personalized Business English coaching (emails, meetings, presentations, role-play) </span></li>
-                <li><i class="bi bi-check"></i> <span>Long-term package discounts</span></li>
-                <li><i class="bi bi-check"></i> <span>A high-touch, concierge-style service</span></li>
-              </ul>
-              <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
-            </div>
-          </div><!-- End Pricing Item -->
-
+      <!-- Launch Plan -->
+      <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="100">
+        <div class="pricing-item">
+          <h3>Launch Plan</h3>
+          <h4><sup>$</sup>35–50<span> / session</span></h4>
+          <p>20-min Audio Only Classes, 2x/week</p>
+          <ul>
+            <li><i class="bi bi-check"></i> 2x/week lessons</li>
+            <li><i class="bi bi-check"></i> 20-min classes</li>
+            <li><i class="bi bi-check"></i> Access to 1:1 tutoring</li>
+            <li><i class="bi bi-check"></i> Free scheduling flexibility</li>
+            <li class="na"><i class="bi bi-x"></i> 3x/week option</li>
+            <li class="na"><i class="bi bi-x"></i> 30-min classes</li>
+          </ul>
+          <div class="text-center">
+            <a href="YOUR_STRIPE_LINK_HERE" class="buy-btn">Buy Now</a>
+          </div>
         </div>
-
       </div>
 
-    </section><!-- /Pricing Section -->
+      <!-- Momentum Plan -->
+      <div class="col-lg-4 featured" data-aos="zoom-in" data-aos-delay="200">
+        <div class="pricing-item">
+          <h3>Momentum Plan</h3>
+          <h4><sup>$</sup>360–540<span> / month</span></h4>
+          <p>20–30 min Video/Audio Classes, 2–3x/week</p>
+          <ul>
+            <li><i class="bi bi-check"></i> 2x/week lessons</li>
+            <li><i class="bi bi-check"></i> 3x/week lessons</li>
+            <li><i class="bi bi-check"></i> 20-min classes</li>
+            <li><i class="bi bi-check"></i> 30-min classes</li>
+            <li><i class="bi bi-check"></i> Access to 1:1 tutoring</li>
+            <li><i class="bi bi-check"></i> Free scheduling flexibility</li>
+          </ul>
+          <div class="text-center">
+            <a href="YOUR_STRIPE_LINK_HERE" class="buy-btn">Buy Now</a>
+          </div>
+        </div>
+      </div>
 
+      <!-- Peak Plan -->
+      <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="300">
+        <div class="pricing-item">
+          <h3>Peak Plan</h3>
+          <h4><sup>$</sup>620<span> / month</span></h4>
+          <p>Premium Video/Audio Classes with full customization</p>
+          <ul>
+            <li><i class="bi bi-check"></i> 2x/week lessons</li>
+            <li><i class="bi bi-check"></i> 3x/week lessons</li>
+            <li><i class="bi bi-check"></i> 20-min classes</li>
+            <li><i class="bi bi-check"></i> 30-min classes</li>
+            <li><i class="bi bi-check"></i> Access to 1:1 tutoring</li>
+            <li><i class="bi bi-check"></i> Free scheduling flexibility</li>
+            <li><i class="bi bi-check"></i> Personalized Business English Coaching</li>
+            <li><i class="bi bi-check"></i> Document & communication review</li>
+            <li><i class="bi bi-check"></i> Accent clarity coaching</li>
+            <li><i class="bi bi-check"></i> Mock meetings & role-play</li>
+            <li><i class="bi bi-check"></i> Priority scheduling & faster replies</li>
+            <li><i class="bi bi-check"></i> Long-term discounts included</li>
+          </ul>
+          <div class="text-center">
+            <a href="YOUR_STRIPE_LINK_HERE" class="buy-btn">Buy Now</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+<!-- /Pricing Section -->
     <!-- Faq Section -->
     <section id="faq" class="faq section">
 
