--- a/freeclass/index.html
+++ b/freeclass/index.html
@@ -41,7 +41,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
+      <a href="/freeclass/" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
 
@@ -54,16 +54,17 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home<br></a></li>
-          <li><a href="#team">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#contact">Contact</a></li>
+
+  <li><a href="/index.html" class="active">Home</a></li>
+  <li><a href="/#team">About</a></li>
+  <li><a href="/#services">Services</a></li>
+  <li><a href="/#testimonials">Testimonials</a></li>
+  <li><a href="/#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="freeclass/index.html">Schedule Your FREE Class</a>
+      <a class="btn-getstarted" href="/freeclass">Schedule Your FREE Class</a>
 
     </div>
   </header>
