--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
             <li class="na"><i class="bi bi-x"></i> 30-min classes</li>
           </ul>
           <div class="text-center">
-            <a href="YOUR_STRIPE_LINK_HERE" class="buy-btn">Buy Now</a>
+            <a href="/pricing" class="buy-btn">Buy Now</a>
           </div>
         </div>
       </div>
@@ -656,7 +656,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
             <li><i class="bi bi-check"></i> Free scheduling flexibility</li>
           </ul>
           <div class="text-center">
-            <a href="YOUR_STRIPE_LINK_HERE" class="buy-btn">Buy Now</a>
+            <a href="/pricing" class="buy-btn">Buy Now</a>
           </div>
         </div>
       </div>
@@ -682,7 +682,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
             <li><i class="bi bi-check"></i> Long-term discounts included</li>
           </ul>
           <div class="text-center">
-            <a href="YOUR_STRIPE_LINK_HERE" class="buy-btn">Buy Now</a>
+            <a href="/pricing" class="buy-btn">Buy Now</a>
           </div>
         </div>
       </div>
