--- a/pricing/index.html
+++ b/pricing/index.html
@@ -185,12 +185,20 @@
   <h2 class="peak-title">⭐ PEAK PLAN (VIP)</h2>
   <p class="peak-subtitle">Full Concierge English Coaching • Priority Access • Maximum Flexibility<img src="../assets/img/portfolio/peakplan.png" style="width:100px; height:auto;  margin-left: 5px; margin-bottom:3px"></p>
 
-  <!-- PRICE -->
-  <div class="peak-price-box">
-    <span class="price-main">$620</span>
-    <span class="price-term">/ month</span>
-    <div class="price-note">+ add-ons & premium flexibility included</div>
+<!-- PRICE -->
+<div class="peak-price-box" style="text-align:center; margin-bottom:15px;">
+  <div style="margin-bottom:5px;">
+    <span class="price-main" style="font-size:28px; font-weight:bold; color:#f1c40f;">$620</span>
+    <span class="price-term" style="color:#fff;"> / month</span>
+    <div class="price-note" style="color:#ddd; font-size:14px;">2x/week sessions • Includes all VIP benefits</div>
   </div>
+  <div>
+    <span class="price-main" style="font-size:28px; font-weight:bold; color:#f1c40f;">$930</span>
+    <span class="price-term" style="color:#fff;"> / month</span>
+    <div class="price-note" style="color:#ddd; font-size:14px;">3x/week sessions • Includes all VIP benefits</div>
+  </div>
+  <div class="price-note" style="color:#aaa; font-size:12px; margin-top:5px;">+ add-ons & premium flexibility included</div>
+</div>
 
   <hr class="peak-divider">
 
