--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
             <li class="na"><i class="bi bi-x"></i> 30-min classes</li>
           </ul>
           <div class="text-center">
-            <a href="/pricing" class="buy-btn">Buy Now</a>
+            <a href="https://buy.stripe.com/4gMcN40OMaXJcbNg4Q08g02" class="buy-btn">Buy Now</a>
           </div>
         </div>
       </div>
