--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 	•	2x/week or 3x/week <br>
 	•	Perfect for business English, meetings, and conversation fluency<br><br>
 </p>
-<a href="YOUR_CALENDLY_LINK_HERE" target="_blank" 
+<a href="/pricing" target="_blank" 
 style="display:inline-block; padding:10px 28px; background-color:#007bff; color:#fff; 
 text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
     Book Video Lessons
@@ -442,7 +442,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
 	•	2x/week or 3x/week <br>
 	•	More affordable, easy to fit into daily life<br><br>
 </p>
-<a href="YOUR_CALENDLY_LINK_HERE" target="_blank" 
+<a href="/pricing" target="_blank" 
 style="display:inline-block; padding:10px 28px; background-color:#007bff; color:#fff; 
 text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
     Book Audio Lessons
@@ -462,7 +462,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
 	•	Ideal for career growth and long-term skill building <br>
 <br>
 </p>
-<a href="YOUR_CALENDLY_LINK_HERE" target="_blank" 
+<a href="/pricing" target="_blank" 
 style="display:inline-block; padding:10px 28px; background-color:#007bff; color:#fff; 
 text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
     Explore Packages
@@ -481,7 +481,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
 	•	Practice real business situations <br>
 	•	Expert-level guidance <br><br>
 </p>
-<a href="YOUR_CALENDLY_LINK_HERE" target="_blank" 
+<a href="/pricing" target="_blank" 
 style="display:inline-block; padding:10px 28px; background-color:#007bff; color:#fff; 
 text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
     Learn More
