--- a/pricing/index.html
+++ b/pricing/index.html
@@ -41,7 +41,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
-      <a href="/freeclass" class="logo d-flex align-items-center me-auto">
+      <a href="/" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
 
@@ -58,7 +58,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
 
-  <li><a href="/index.html" class="active">Home</a></li>
+  <li><a href="/" class="active">Home</a></li>
   <li><a href="/#team">About</a></li>
   <li><a href="/#services">Services</a></li>
   <li><a href="/#testimonials">Testimonials</a></li>
