--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-briefcase icon flex-shrink-0"></i>
               <div>
-                <h4 class="title"><a href="service-details.html" class="stretched-link">Video Lessons (Premium)</a></h4>
+                <h4 class="title"><a href="/pricing/" class="stretched-link">Video Lessons (Premium)</a></h4>
                 <p class="description">Face-to-face live video lessons on Zoom. Best for speaking, pronunciation, presentation practice, and high-impact communication training.<br>
 	•	20-minute or 30-minute sessions <br>
 	•	2x/week or 3x/week <br>
@@ -436,7 +436,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-card-checklist icon flex-shrink-0"></i>
               <div>
-    <h4 class="title"><a href="service-details.html" class="stretched-link">Audio Lessons (Flexible)</a></h4>
+    <h4 class="title"><a href="/pricing/" class="stretched-link">Audio Lessons (Flexible)</a></h4>
                 <p class="description">Audio-only lessons via Bria. Great for busy schedules, commuting, or professionals who prefer voice training over video.<br>
 	•	20-minute or 30-minute sessions <br>
 	•	2x/week or 3x/week <br>
@@ -455,7 +455,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
             <div class="service-item d-flex position-relative h-100">
               <i class="bi bi-bar-chart icon flex-shrink-0"></i>
               <div>
-               <h4 class="title"><a href="service-details.html" class="stretched-link">Monthly & Multi-Month Packages</a></h4>
+               <h4 class="title"><a href="/pricing/" class="stretched-link">Monthly & Multi-Month Packages</a></h4>
                 <p class="description">Save with discounted 3-month, 6-month, and 12-month plans. Commit to consistent learning and achieve long-term fluency. <br>
 	•	2x/week or 3x/week <br>
 	•	20 or 30 minutes each <br>
@@ -475,7 +475,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
             <div class="service-item d-flex position-relative h-100">
              <i class="bi bi-brightness-high icon flex-shrink-0"></i>
               <div>
-                              <h4 class="title"><a href="service-details.html" class="stretched-link">Personalized Business English Coaching</a></h4>
+                              <h4 class="title"><a href="/pricing/" class="stretched-link">Personalized Business English Coaching</a></h4>
                 <p class="description">For high-level professionals who need specialized training in presentations, job interviews, negotiations, business writing, or corporate English. <br>
 	•	Customized curriculum <br>
 	•	Practice real business situations <br>
