--- a/welcome/index.html
+++ b/welcome/index.html
@@ -76,13 +76,15 @@
   <div class="container section-title" data-aos="fade-up">
     <h2>Discover What Happens in Your Free 20-Minute English Class</h2>
     <p>Discover how our fun, personalized sessions make speaking English simple<br>당신의 목표에 맞는 플랜을 선택하세요</p>
-<!-- Video Section -->
-  <div style="text-align:center; margin-top:50px;">
-    <video width="720" height="405" controls autoplay muted>
-      <source src="../assets/img/portfolio/PresentationVideo.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
+
+
+    <!-- Video Section -->
+<div class="video-container">
+  <video controls>
+    <source src="../assets/img/portfolio/PresentationVideo.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
     
 </div>
   </div>
