--- a/welcome/index.html
+++ b/welcome/index.html
@@ -74,7 +74,7 @@
 
 <section id="pricing" class="pricing section section-bg dark-background" style="margin-bottom: -150px">
   <div class="container section-title" data-aos="fade-up">
-    <h2>Discover What Happens in Your Free 20-Minute English Class</h2>
+    <h2>Here’s what you’ll experience — just press play 👇</h2>
     <p>Discover how our fun, personalized sessions make speaking English simple<br>당신의 목표에 맞는 플랜을 선택하세요</p>
 
 
