--- a/index.html
+++ b/index.html
@@ -571,21 +571,6 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
               </div>
             </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-            
-                <h3>Juyoung J.</h3>
-                <h4>Student</h4>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item">
@@ -597,7 +582,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                  <span>"I enjoyed my experience with Dan - he works really hard, there are a lot of things I enjoyed tutoring with Dan. I enjoyed the serious advice on life, and simply talking about every day life. I like what Dan recommendations, we even discussed relationships. I am going to study hard next year more than this year."</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
