--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
+  <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '883743971211813');
+fbq('track', 'HomePage');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=883743971211813&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
   <!-- Favicons -->
   <link href="assets/img/portfolio/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -582,7 +600,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>"I enjoyed my experience with Dan - he works really hard, there are a lot of things I enjoyed tutoring with Dan. I enjoyed the serious advice on life, and simply talking about every day life. I like what Dan recommendations, we even discussed relationships. I am going to study hard next year more than this year."</span>
+                  <span>I enjoyed my experience with Dan - he works really hard, there are a lot of things I enjoyed tutoring with Dan. I enjoyed the serious advice on life, and simply talking about every day life. I like what Dan recommendations, we even discussed relationships. I am going to study hard next year more than this year.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
