--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
     <!-- Section Title -->
     <div class="section-title text-center" style="margin-bottom:40px;">
       <h2>Contact Me</h2>
-      <p>Have questions or want to schedule your free session? You can email me, fill out the form below, or book directly.</p>
+      <p>Have questions or want to schedule your free session? You can email me, or book directly.</p>
     </div>
 
     <div class="row justify-content-center">
@@ -865,42 +865,18 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
         </div>
       </div>
       <!-- End Email Info -->
- 
- <!-- Contact Form -->
-      <div class="col-lg-6">
-        <form action="https://formsubmit.co/dan@tutordanacademy.com" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-          <div class="row gy-4">
-
-            <div class="col-md-6">
-              <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-            </div>
-
-            <div class="col-md-6">
-              <input type="email" name="email" class="form-control" placeholder="Your Email" required>
-            </div>
-
-            <div class="col-md-12">
-              <input type="text" name="subject" class="form-control" placeholder="Subject" required>
-            </div>
-
-            <div class="col-md-12">
-              <textarea name="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-            </div>
-
-            <div class="col-md-12 text-center">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
-
-              <button type="submit" style="padding:12px 28px; font-size:16px; background-color:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;">
-                Send Message
-              </button>
-            </div>
-
-          </div>
-        </form>
-      </div>
-      <!-- End Contact Form -->
+ <!-- Contact / Schedule CTA -->
+<div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+  <div class="php-email-form" style="padding: 30px; border-radius: 8px; background-color: #f8f9fa; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-align: center;">
+    <h3 style="margin-bottom: 20px;">Schedule Your Free 20-Minute English Session</h3>
+    <p style="margin-bottom: 25px;">Book your session instantly. Experience a fun, personalized class with Tutor Dan!</p>
+    <a href="https://tutordanacademy.com/freeclass" 
+       style="display:inline-block; padding:12px 28px; font-size:16px; background-color:#007bff; color:white; border:none; border-radius:6px; text-decoration:none; cursor:pointer;">
+      Book Your Free Class Now
+    </a>
+  </div>
+</div>
+<!-- End Contact / Schedule CTA -->
 
 
 
