delete linkedin link

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@ text-decoration:none; border-radius:6px; font-size:16px; font-weight:600;">
             <h4>Danso Gordon</h4>
             <span>Business English Tutor</span>
                   <div class="social-links d-flex justify-content-center mt-4">
-          <a href=""><i class="bi bi-linkedin" style="color:#fff;"></i></a>
+          <a href=""></a>
         </div>
           </div>
           
